# natrium_backend

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20210722085018_init.sql  20210726112140_init.sql  20210729104959_google_key.sql  20210910153602_timescale_init.sql  20210912194619_localisation.sql  20210912200830_sensor.sql  20210912201353_temperature.sql  20210912203441_hygrometry.sql
src/: auth.rs  config.rs  data.rs  errors.rs  handlers.rs  infrastructure.rs  main.rs
src/application/auth/: auth_service_impl.rs  login.rs  mod.rs
src/auth/: jwt_authentication.rs  key_value  user.rs
src/data/: auth_provider.rs  farm.rs  hub.rs  measurer.rs  rack.rs  temperature.rs  user.rs
src/data/rack/: rack.rs
src/data/temperature/: temperature.rs
src/domain/: auth.rs  data.rs  mod.rs
src/domain/auth/: errors.rs  jwt_authentication.rs  mod.rs  ports.rs  provider.rs  user.rs
src/domain/auth/auth_types/: claims.rs  credential.rs  email.rs  jwt_key.rs  key_identifier.rs  mod.rs  password.rs  provider.rs  provider_key.rs  salt.rs  token.rs
src/domain/auth/value_object/: email.rs  key_identifier.rs  mod.rs  password.rs
src/domain/core/: errors.rs  mod.rs  value_object.rs
src/domain/data/: temperature.rs
src/domain/measure/: farm.rs  hub.rs  mod.rs  rack.rs
src/infrastructure/: user.rs
src/infrastructure/auth/: auth_controller.rs  mod.rs  postgres_repo.rs  provider.rs  redis_repo.rs  user.rs
