[package]
name = "natrium_backend"
version = "0.1.0"
edition = "2018"
authors = ["gwendal <gwendalfernet@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-httpauth = "0.5"
actix-web-grants = "2"
async-trait = "0.1.5"
thiserror = "1"
rust-argon2 = "0.8"
jsonwebtoken = "7"
reqwest = { version = "0.10", features = ["json"] }
rand = "0.8"
sqlx = { version = "0.4", features = [
    "postgres",
    "runtime-actix-native-tls",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
config = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
lazy_static = "1"
time = "0.2.27"
redis = { version = "0.15.1", features = ["tokio-rt-core"] }

[dev-dependencies]
